# ocaml-cc

./: LICENSE  README.md  a.out  dune-project  ocaml-cc.opam
data/: lexer.txt  pp.txt  test.c  todo.txt
data/lexer_tests/: backslash-newline.txt  literals.txt  ops_and_punctuation.txt  test.txt
data/lexer_tests/include/: main.txt
lib/: diagnostics.ml  diagnostics.mli  dune  lexer.ml  lexer.mli  preprocessor.ml  preprocessor.mli  source.ml  source.mli  token.ml  token.mli
lib/preprocessor/: engine.ml  lexer.ml  lexer.mli
test/: dune
